--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img id="bg_img" src="default_bg.png" alt="" />
 
       <!--This is where the draggable buttons go-->
-
+      <a>TEST PUSH</a>
       <!-- End of draggable buttons -->
   </div>
   <!-- <textarea name="end_greeting">DISPLAY IS NOT YET AVAILABLE! :D</textarea><br> -->
