Added dynamic button

--- a/index.html
+++ b/index.html
@@ -88,14 +88,12 @@
     </table>
   </div>
 
-  <div id="canvas_container"ue>
+  <div id="canvas_container">
     <!-- <canvas id="canvas" width="500" height="374">
       Your browser does not support the HTML5 canvas tag.
     </canvas> -->
     <div id="canvas">
-      <div id="draggable" class="buttons" style="top:0px; left:250px; background-color: #3399FF;">Web Development</div>
-      <div id="draggable2" class="buttons" style="top:100px; left:250px; background-color: #3399FF;">Music Production</div>
-      <div id="draggable3" class="buttons" style="top:200px; left:250px; background-color: #3399FF;">Animations</div>
+      <!-- <div class="buttons" style="top:0px; left:0px; background-color: #3399FF;">Button</div> -->
     </div>
   </div>
 
