Added display button position

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   <div class="header_category">
     <i class="fa fa-eye fa-1x"></i>
     <a>Display:</a><br>
-
+    <a id="xpos"></a>
+    <a id="ypos"></a>
     <table id="toolSet">
       <tr>
         <td>
