--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
 </head>
-<body id="body">
+<body>
 
 <div id="nav_bar" class="nonselectable">
   <i class="fa fa-cog fa-spin"></i>
